# SQLiteV1

./: CMakeLists.txt  SQLiteDev.txt
src/: amarokconfig.kcfg
src/amarokurls/: BookmarkModel.cpp
src/core-impl/collections/db/sql/: CMakeLists.txt  DatabaseUpdater.cpp  DatabaseUpdater.h  SqlCollectionFactory.cpp  SqlMeta.cpp  SqlQueryMakerInternal.cpp  SqlRegistry_p.cpp  SqlScanResultProcessor.cpp
src/core-impl/collections/db/sql/mysqlcollection/: MySqlCollectionFactory.cpp  amarok_collection-mysqlcollection.desktop
src/core-impl/collections/db/sql/sqlitecollection/: CMakeLists.txt  SQLiteCollectionFactory.cpp  SQLiteCollectionFactory.h  SQLiteQueryMaker.cpp  SQLiteQueryMaker.h  amarok_collection-sqlitecollection.desktop
src/core-impl/collections/playdarcollection/: PlaydarCollection.cpp
src/core-impl/podcasts/sql/: SqlPodcastProvider.cpp
src/core-impl/storage/sql/: CMakeLists.txt
src/core-impl/storage/sql/mysql-shared/: MySqlStorage.cpp
src/core-impl/storage/sql/mysqlestorage/: MySqlEmbeddedStorage.cpp  MySqlEmbeddedStorageFactory.cpp
src/core-impl/storage/sql/mysqlserverstorage/: MySqlServerStorage.cpp
src/core-impl/storage/sql/sqlitestorage/: CMakeLists.txt  SQLiteStorage.cpp  SQLiteStorage.cpp.autosave  SQLiteStorage.h  SQLiteStorageFactory.cpp  SQLiteStorageFactory.h  amarok_storage-sqlitestorage.desktop
src/core/storage/: SqlStorage.h
src/core/support/: Debug.h
src/dbus/mpris2/: DBusAbstractAdaptor.cpp
src/dynamic/: BiasSolver.cpp
src/playlist/: PlaylistRestorer.cpp
src/playlist/view/listview/: PrettyItemDelegate.cpp  PrettyItemDelegate.cpp.autosave
src/playlistmanager/sql/: SqlUserPlaylistProvider.cpp
src/scanner/: AbstractScanResultProcessor.cpp
src/services/magnatune/: MagnatuneDatabaseHandler.cpp
